--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "10.0.6",
     "react": "17.0.1",
+    "react-cursor-position": "^3.0.3",
     "react-dom": "17.0.1",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1",
