--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "next": "10.0.6",
     "react": "17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-cursor-position": "^3.0.3",
     "react-dom": "17.0.1",
     "react-scroll": "^1.8.1",
