--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1",
+    "use-is-in-viewport": "^1.0.9",
     "uuid": "^8.3.2"
   }
 }
