--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
-    "next": "10.0.6",
+    "next": "^10.2.0",
     "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-cursor-position": "^3.0.3",
     "react-dom": "17.0.1",
     "react-scroll": "^1.8.1",
+    "react-spring": "^9.1.2",
     "styled-components": "^5.2.1",
-    "use-is-in-viewport": "^1.0.9",
     "uuid": "^8.3.2"
   }
 }
