--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
-    "next": "^10.2.0",
+    "next": "10.0.6",
     "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-cursor-position": "^3.0.3",
